# tauri-plugin-authenticator

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: clippy.yml  test.yml
dist-js/: index.cjs  index.d.ts  index.js  index.min.js  index.min.js.map  index.mjs  index.mjs.map
examples/svelte-app/: README.md  package.json
examples/svelte-app/public/: index.tauri.html
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
src/: auth.rs  lib.rs  u2f.rs
webview-dist/: index.d.ts  index.js  index.min.js  index.mjs
webview-src/: index.ts
