[package]
name = "tauri-plugin-authenticator"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = "1.0.0-beta-rc.4"
authenticator = "0.3.1"
once_cell = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sha2 = "0.9"
async-std = { version = "1.9", features = ["attributes"] }
base64 = { version = "^0.10" }
anyhow = "1.0.38"
u2f = "0.2"
chrono = "0.4"

[dev-dependencies]
rand = "0.8"
rusty-fork = "0.3"
