[package]
name = "tauri-plugin-authenticator"
version = "0.1.0"
authors = ["Tauri Programme within The Commons Conservancy"]
license = "Apache-2.0 OR MIT"
edition = "2018"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = "1.0.0-beta.8"
authenticator = "0.3.1"
once_cell = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sha2 = "0.9"
async-std = { version = "1.10", features = ["attributes"] }
base64 = { version = "^0.13" }
anyhow = "1.0.44"
u2f = "0.2"
chrono = "0.4"

[dev-dependencies]
rand = "0.8"
rusty-fork = "0.3"
