[package]
name = "tauri-plugin-authenticator"
version = "0.1.0"
authors = ["Tauri Programme within The Commons Conservancy"]
license = "Apache-2.0 OR MIT"
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
authenticator = "0.3.1"
once_cell = "1.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sha2 = "0.10"
async-std = { version = "1.10", features = ["attributes"] }
base64 = { version = "^0.13" }
anyhow = "1.0.55"
u2f = "0.2"
chrono = "0.4"
tauri = "1.0.0-rc.3"

[dev-dependencies]
rand = "0.8"
rusty-fork = "0.3"