[package]
name = "app"
version = "0.1.0"
description = "Authenticator Example App"
authors = [ "Evan Feenstra <evanfeenstra@gmail.com>" ]
license = ""
repository = ""
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta-rc.4", features =["api-all"]}
tauri-plugin-authenticator = { path = "../../../" }

[build-dependencies]
tauri-build = "1.0.0-beta-rc.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
