[package]
name = "app"
version = "0.1.0"
description = "Authenticator Example App"
authors = [ "Tauri Programme within The Commons Conservancy" ]
license = ""
repository = ""
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all"] }
tauri-plugin-authenticator = { path = "../../../" }

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "next" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
